--- a/params.yaml
+++ b/params.yaml
@@ -1,6 +1,6 @@
-num_images: 150
-exp_time: 0.01
+num_images: 7500
+exp_time: 0.004
 file_path: 0
-file_name: yyyymmdd_name_conditionXX_conditionYY # session number automatically appends to date
-framerate: 30
-trigger_line: Line0 # not used if framerate is not "hardware"
+file_name: 20230421_kitkat_speed18_incline20 # session number automatically appends to date
+framerate: hardware
+trigger_line: Line3 # not used if framerate is not "hardware"
